--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "next": "15.4.4",
@@ -15,12 +17,16 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/jest": "^29",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "9.32.0",
     "eslint-config-next": "15.4.4",
+    "jest": "^29",
+    "jest-environment-node": "^29",
     "tailwindcss": "^4",
+    "ts-jest": "^29",
     "typescript": "^5"
   }
 }
