--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.83.0",
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
