--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "check-all": "biome check .",
+    "fix-all": "biome check . --write",
+    "lint": "biome lint .",
+    "lint:fix": "biome lint . --write",
+    "format": "biome format . --write",
+    "format:check": "biome format .",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -17,13 +22,12 @@
     "react-dom": "19.1.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.1.3",
     "@tailwindcss/postcss": "^4",
     "@types/jest": "^29",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "9.32.0",
-    "eslint-config-next": "15.4.4",
     "jest": "^29",
     "jest-environment-node": "^29",
     "tailwindcss": "^4",
